--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -46,7 +46,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Set app name
-      run: echo "APP_NAME=${{ github.event.repository.name }}" >> $GITHUB_ENV
+      run: echo "APP_NAME=$(echo ${{ github.event.repository.name }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
 
     - name: Download artifact
       uses: actions/download-artifact@v3
